--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header > nav > a:hover{
     color: var(--cor04);
 }
 main{
-    background-color: var(--cor01);
+    background-color: white;
     padding: 10px;
     min-width: none;
     max-width: 600px;
@@ -57,6 +57,10 @@ main{
 }
 main > section > article > p{
     text-indent: 30px;
+}
+#imagem{
+    display: block;
+    text-align: center;
 }
 .link_contato{
     font-weight: bold;
