--- a/style_dark.css
+++ b/style_dark.css
@@ -46,14 +46,14 @@ header > nav > a:hover{
     transition-duration: 0.4s;
     color: var(--cor04);
 }
-#dark_box{
+#clear_box{
     margin-top: 20px;
     margin-bottom: 25px;
 }
-#dark{
-    background-color: rgb(39, 39, 39);
+#clear{
+    background-color: rgb(226, 226, 226);
     padding: 10px;
-    color: white;
+    color: black;
     border-radius: 30px;
     font-weight: bold;
     text-decoration: none;
