--- a/style_dark.css
+++ b/style_dark.css
@@ -2,10 +2,10 @@
 
 :root{
     --cor01: #F7F7F7;
-    --cor02: #F4C56B;
-    --cor03: #2C5AA0;
-    --cor04: #5DBAC4;
-    --cor05: #D94D73;
+    --cor02: #9c7d44;
+    --cor03: #1c3761;
+    --cor04: #348791;
+    --cor05: #9b3852;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -62,13 +62,14 @@ header > nav > a:hover{
     text-align: start;
 }
 main{
-    background-color: white;
+    background-color: black;
     padding: 10px;
     min-width: none;
     max-width: 600px;
     margin: auto;
     text-align: justify;
     box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.384);
+    color: white;
 }
 main > section > article > p{
     text-indent: 30px;
@@ -106,4 +107,6 @@ footer > p{
     background-color: var(--cor02);
     text-align: center;
     padding: 3px;
+    color: white;
+    font-weight: bold;
 }
