--- a/style.css
+++ b/style.css
@@ -102,6 +102,19 @@ main > section > article > p{
     font-weight: bold;
     color: var(--cor05);
 }
+#botao_github{
+    text-align: center;
+    margin-bottom: 5px;
+}
+#botao_github > a{
+    text-decoration: none;
+    font-weight: bold;
+    color: blue;
+}
+#botao_github > a:hover{
+    text-decoration: underline;
+    color: var(--cor03);
+}
 footer > p{
     background-color: var(--cor02);
     text-align: center;
